--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Cool Header</h1>
+        <h1>WCCUSD School Resources</h1>
       </header>
 
       <div id="map"><span class="loading animated flash">Loading...</span></div>
