--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <table>
         <tr><th class="tHeader">School Name</th><th class="tHeader">Prog or Svc Category</th><th class="tHeader">Days and Times</th></tr>
           {{#rows}}
-            <tr><td>{{schoolname}}</td><td>{{provorsvcategory}}</td><td>{{daysandtimes}}</td></tr>
+            <tr><td>{{schoolname}}</td><td>{{progorsvccategory}}</td><td>{{daysandtimes}}</td></tr>
           {{/rows}}
       </table>
     </script>
